--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  sqflite: ^2.3.0
 
 dev_dependencies:
   test: ^1.24.9
