--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   sqflite: ^2.3.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   test: ^1.24.9
