--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.3.0
   google_fonts: ^6.1.0
   rxdart: ^0.27.7
+  collection: ^1.18.0
 
 dev_dependencies:
   test: ^1.24.9
