--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.1.0
   rxdart: ^0.27.7
   collection: ^1.18.0
+  intl: ^0.17.0
 
 dev_dependencies:
   test: ^1.24.9
