--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   google_fonts: ^6.1.0
   rxdart: ^0.27.7
   collection: ^1.18.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
   universal_io: ^2.2.2
+  share_plus: ^9.0.0
 
 dev_dependencies:
   test: ^1.24.9
@@ -99,3 +100,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/
