--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
     sdk: flutter
   universal_io: ^2.2.2
   share_plus: ^9.0.0
+  archive: ^3.6.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   test: ^1.24.9
