--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   share_plus: ^9.0.0
   archive: ^3.6.0
   url_launcher: ^6.2.6
+  wheel_picker: ^0.0.4
 
 dev_dependencies:
   test: ^1.24.9
