--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,5 @@
 	"dart.flutterHotReloadOnSave": "allIfDirty",
 	"editor.insertSpaces": false,
 	"editor.tabSize": 3,
-	"dart.flutterSdkPath": "D:\\Workspace\\flutter2",
+	"dart.flutterSdkPath": "D:\\Workspace\\flutter",
 }
