--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   archive: ^3.6.0
   url_launcher: ^6.2.6
   wheel_picker: ^0.0.4
+  file_picker: ^8.0.6
 
 dev_dependencies:
   test: ^1.24.9
