--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,6 @@
 	"editor.insertSpaces": false,
 	"editor.tabSize": 3,
 	"dart.flutterSdkPath": "D:\\Workspace\\flutter",
+	"editor.parameterHints.enabled": true,
+	"editor.inlayHints.enabled": "offUnlessPressed",
 }
