--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.2.6
   wheel_picker: ^0.0.4
   file_picker: ^8.0.6
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   test: ^1.24.9
