--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   wheel_picker: ^0.0.4
   file_picker: ^8.0.6
   scrollable_positioned_list: ^0.3.8
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   test: ^1.24.9
